create filter options component for content blocks
this will enable us to do more complicated
functions like generating checkboxes for block
types.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -12,7 +12,11 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-third">
-    <%= render "filter_options" %>
+    <%= render(
+          ContentBlockManager::ContentBlock::Document::Index::FilterOptionsComponent.new(
+            filters: @filters,
+            ),
+          ) %>
   </div>
   <div class="govuk-grid-column-two-thirds">
     <h2 class="govuk-heading-m"><%= pluralize(@content_block_documents.count, "result") %></h2>
