--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -19,6 +19,15 @@
     items: items_for_block_type,
   } %>
 
+  <%= render "components/select_with_search", {
+    id: "lead_organisation",
+    name: "lead_organisation",
+    label:  "Lead organisation",
+    heading_size: "s",
+    include_blank: true,
+    options: options_for_lead_organisation,
+  } %>
+
   <%= render "govuk_publishing_components/components/button", {
     text: "View results",
     margin_bottom: 4,
