--- a/app/views/admin/topical_event_featurings/index.html.erb
+++ b/app/views/admin/topical_event_featurings/index.html.erb
@@ -32,7 +32,7 @@
       label: "Currently featured",
       content: render(Admin::CurrentlyFeaturedTabComponent.new(
         featurings: @topical_event_featurings,
-        maximum_featured_documents: 5,
+        maximum_featured_documents: TopicalEvent::MAX_FEATURED_DOCUMENTS,
       )),
     },
     {
