add an 'all organisations' default option for filter
again mimic-ing what Whitehall have on their
filters, and makes it clearer to the user what
they are selecting.

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -24,7 +24,7 @@
     name: "lead_organisation",
     label:  "Lead organisation",
     heading_size: "s",
-    include_blank: true,
+    include_blank: false,
     options: options_for_lead_organisation,
   } %>
 
