Support reverting "foreign language only" mode by choosing English
We had a [support ticket on Zendesk](https://govuk.zendesk.com/agent/#/tickets/5956584)
recently: a user created an English document, then accidentally
set it to "Foreign language only" mode when trying to add a Welsh
translation. The English version became unavailable, and they were
unable to switch back to English mode - the document was stuck in
"foreign language only" mode.

Whitehall has [three varying levels of support](https://docs.google.com/document/d/1ma5gzJU8EUl3Yo6J6z3XzkEdpqUVLPLPEoSPff9ZduE/edit)
for languages:

1. No support (e.g. for Calls for Evidence)
2. Foreign language only (can change primary locale to something
   other than English, but not provide any other translations)
3. Translatable (can add any number of translations, but not
   change the primary locale to anything other than English)

There therefore never should be a situation where a publisher
has a document with a non-English primary locale AND any
translations. Therefore we shouldn't be breaking any existing
workflows by triggering the deletion of non-English translations
under these circumstances.

NB, I did consider not adding a "English" option to the list
of languages, and instead figure out the user's intention from
the absence of the checked "foreign language only" checkbox.
But this felt rather unsafe - all it would take is for a developer
to rename that checkbox and then the absence check would always
return `true` and we could find ourselves in a place where
non-English documents get mistakenly converted to English ones.
See #9569 for the approach if interested.

Trello: https://trello.com/c/5B60uybX/3062-unable-to-uncheck-the-create-a-foreign-language-only-box

--- a/app/views/admin/editions/_locale_fields.html.erb
+++ b/app/views/admin/editions/_locale_fields.html.erb
@@ -1,4 +1,10 @@
 <div class="govuk-!-margin-bottom-8 app-view-edit-edition__locale-field js-locale-switcher-selector <%= "app-view-edit-edition__locale-field--hidden" unless edition.locale_can_be_changed? %>">
+  <%
+    locale_options = options_for_locales(Locale.non_english)
+    if form.object.primary_locale != "en"
+      locale_options = [%w[English en]] + locale_options
+    end
+  %>
   <%= render "govuk_publishing_components/components/checkboxes", {
     name: "edition[create_foreign_language_only]",
     id: "edition_create_foreign_language_only",
@@ -19,7 +25,7 @@
           heading_size: "m",
           include_blank: true,
           errors: errors_for(edition.errors, :primary_locale),
-          options: options_for_locales(Locale.non_english).map do |language, value|
+          options: locale_options.map do |language, value|
             {
               text: language,
               value: value,
