Return unique pageviews in host editions table

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
@@ -13,6 +13,9 @@ it out for now-->
       text: "Document Type",
     },
     {
+      text: "Unique pageviews",
+    },
+    {
       text: "Publishing organisation",
     },
     {
