--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/summary_card_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/summary_card_component.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card", {
+<%= render "govuk_publishing_components/components/summary_card", {
   title:,
   rows:,
   summary_card_actions:,
