Add a link to reset the fields

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -60,8 +60,15 @@
     ],
   } %>
 
-  <%= render "govuk_publishing_components/components/button", {
-    text: "View results",
-    margin_bottom: 4,
-  } %>
+  <div class="govuk-button-group">
+    <%= render "govuk_publishing_components/components/button", {
+      text: "View results",
+      margin_bottom: 4,
+    } %>
+
+    <%= link_to "Reset all fields",
+                helpers.content_block_manager.content_block_manager_root_path(reset_fields: true),
+                class: "govuk-link" %>
+  </div>
+
 <% end %>
