paginate Content Block search results
This uses a similar approach as the Whitehall
app's Edition Filter but a bit simplified - we
don't currently need to set the page size
externally so I've set it to be the shared default
of 15 for now.

I've also removed mocking in an integration test
on the controller, because (when possible) we want
integration tests to cover the end-to-end
logic and behaviour rather than stubbing or mocking.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -36,5 +36,7 @@
     <% @content_block_documents.each do |content_block_document| %>
       <%= render ContentBlockManager::ContentBlock::Document::Index::SummaryCardComponent.new(content_block_document:) %>
     <% end %>
+
+    <%= paginate(@content_block_documents, theme: "govuk_paginator") %>
   </div>
 </div>
