set content block filters to expand by default
this came after user feedback that it was
frustrating that they were closed by default.

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -20,7 +20,7 @@
             }
           ),
         },
-        expanded: @filters&.fetch(:keyword, nil).present?,
+        expanded: true,
       },
       {
         heading: {
@@ -39,7 +39,7 @@
             }
           ),
         },
-        expanded: @filters&.fetch(:block_type, nil).present?,
+        expanded: true,
       },
       {
         heading: {
@@ -55,7 +55,7 @@
             }
           ),
         },
-        expanded: @filters&.fetch(:lead_organisation, nil).present?,
+        expanded: true,
       },
     ],
   } %>
