--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
@@ -1,2 +1,3 @@
 @import "components/filter-options-component";
+@import "components/host-editions-table-component";
 @import "components/timeline-component";
