Send page and order args in the show view
I’ve also added a shared suite of tests, which we’ll use in the next
commit.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
@@ -18,6 +18,8 @@
       ContentBlockManager::ContentBlock::Document::Show::HostEditionsTableComponent.new(
         caption: "Content appears in",
         host_content_items: @host_content_items,
+        current_page: @page,
+        order: @order,
       ),
     ) %>
   </div>
