Send order and page args in review_links step
Here we also use the shared tests introduced in the last commit.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
@@ -16,6 +16,8 @@
             is_preview: true,
             caption: "Content it appears in",
             host_content_items: @host_content_items,
+            current_page: @page,
+            order: @order,
             ),
           ) %>
   </div>
