Add "Retag content" form to the 'more admin features' index

--- a/app/views/admin/more/index.html.erb
+++ b/app/views/admin/more/index.html.erb
@@ -20,6 +20,7 @@
         admin_world_location_news_link,
         admin_worldwide_organisations_link,
         admin_republish_content_link,
+        admin_retag_content_link,
       ],
     } %>
   </div>
