Use helper method when linking to support

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -14,7 +14,7 @@
     <span>
       <%= render "govuk_publishing_components/components/button", {
         text: "Raise a support request",
-        href: "https://govuk.zendesk.com",
+        href: support_url,
         secondary_solid: true,
       } %>
     </span>
