--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
@@ -15,7 +15,7 @@
     <h2 class="govuk-heading-m">What happens next</h2>
     <p><%= @paragraph_copy %><br>
     If you need any support or want to delete an instance you can
-      <a class="govuk-link--no-visited-state" href="<%= Plek.external_url_for("support") %>">raise a support request</a>
+      <%= link_to "raise a support request", support_url, class: "govuk-link--no-visited-state" %>
     </p>
     <%= render "govuk_publishing_components/components/button", {
         text: "View content block",
