--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
@@ -25,6 +25,7 @@
         host_content_items: @host_content_items,
         current_page: @page,
         order: @order,
+        content_block_edition: @content_block_document.latest_edition,
       ),
     ) %>
   </div>
