--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/review_links.html.erb
@@ -18,6 +18,7 @@
             host_content_items: @host_content_items,
             current_page: @page,
             order: @order,
+            content_block_edition: @content_block_edition,
             ),
           ) %>
   </div>
