--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
@@ -18,6 +18,11 @@ it out for now-->
         sort_direction: sort_direction("document_type"),
       },
       {
+        text: "Instances",
+        href: sort_link("instances"),
+        sort_direction: sort_direction("instances"),
+      },
+      {
         text: "Unique pageviews",
         href: sort_link("unique_pageviews"),
         sort_direction: sort_direction("unique_pageviews"),
