--- a/app/views/admin/topical_events/_form.html.erb
+++ b/app/views/admin/topical_events/_form.html.erb
@@ -137,41 +137,17 @@
     legend_text: "Social media accounts",
     heading_size: "l",
   } do %>
-    <div data-module="AddAnother" data-add-text="Add account" class="govuk-!-margin-bottom-4">
-      <%= form.fields_for :social_media_accounts do |social_media_form| %>
-        <div class="js-duplicate-fields-set">
-          <div class="govuk-!-margin-bottom-6">
-            <div class="govuk-!-margin-bottom-4">
-              <%= render "govuk_publishing_components/components/select", {
-                id: "topical_event_social_media_accounts_attributes_#{social_media_form.index}_social_media_service_id",
-                label: "Service (required)",
-                name: "topical_event[social_media_accounts_attributes][#{social_media_form.index}][social_media_service_id]",
-                heading_size: "m",
-                options: [{ text: "", value: "" }] +
-                  SocialMediaService.all.map do |social_media|
-                    {
-                      text: social_media.name,
-                      value: social_media.id,
-                      selected: social_media_form.object.social_media_service_id == social_media.id,
-                    }
-                  end,
-                full_width: true,
-              } %>
-            </div>
-            <%= render "govuk_publishing_components/components/input", {
-              label: {
-                text: "URL (required)",
-              },
-              name: "topical_event[social_media_accounts_attributes][#{social_media_form.index}][url]",
-              id: "topical_event_social_media_accounts_attributes_#{social_media_form.index}_url",
-              value: social_media_form.object.url,
-              heading_size: "m",
-              error_items: errors_for(social_media_form.object.errors, :url),
-            } %>
-          </div>
-        </div>
-      <% end %>
-    </div>
+    <%= render "govuk_publishing_components/components/add_another", {
+      fieldset_legend: "Account",
+      add_button_text: "Add account",
+      items: form.object.social_media_accounts.each_with_index.map do  |social_media_account, index|
+        {
+          fields: render(partial: "admin/topical_events/social_media_account_fields", locals: { form:, social_media_account:, index: }),
+          destroy_checkbox: render("govuk_publishing_components/components/checkboxes", { name: "topical_event[social_media_accounts_attributes][#{index}][_destroy]", items: [{label: "Delete", value: "1" }]}),
+        }
+      end,
+      empty: render(partial: "admin/topical_events/social_media_account_fields", locals: { form:, social_media_account: SocialMediaAccount.new, index: form.object.social_media_accounts.length }),
+    } %>
   <% end %>
 
   <div class="govuk-button-group govuk-!-margin-top-8">
