--- a/app/views/admin/shared/_featured_link_fields.html.erb
+++ b/app/views/admin/shared/_featured_link_fields.html.erb
@@ -1,77 +1,53 @@
-<%
-  featured_links = form.object.featured_links
-  featured_links = [LocalisedModel.new(FeaturedLink.new, I18n.default_locale)] unless featured_links.any?
-  model = form.object.model_name.singular
+<%= form.fields_for :featured_links, featured_link do |featured_link_form| %>
+  <% if @translation_locale && @translation_locale.code != I18n.default_locale %>
+    <%= render "components/translated_input", {
+      input: {
+        label: {
+          text: "Title",
+        },
+        heading_size: "s",
+        value: featured_link_form.object.title,
+        name: "#{model}[featured_links_attributes][#{index}][title]",
+        id: "#{model}_featured_links[#{index}]_title",
+      },
+      details: {
+        text: featured_link_form.object.title,
+      },
+    } %>
 
-  if form.object.respond_to?(:visible_featured_links_count)
-    visible_links = form.object.visible_featured_links_count
-  else
-    visible_links = FeaturedLink::DEFAULT_SET_SIZE
-  end
+    <%= render "components/translated_input", {
+      input: {
+        label: {
+          text: "URL",
+        },
+        heading_size: "s",
+        value: featured_link_form.object.url,
+        name: "#{model}[featured_links_attributes][#{index}][url]",
+        id: "#{model}_featured_links[#{index}]_url",
+      },
+      details: {
+        text: featured_link_form.object.url,
+      },
+    } %>
+  <% else %>
+    <%= render "govuk_publishing_components/components/input", {
+      label: {
+        text: "Title",
+      },
+      heading_size: "s",
+      value: featured_link_form.object.title,
+      name: "#{model}[featured_links_attributes][#{index}][title]",
+      id: "#{model}_featured_links[#{index}]_title",
+    } %>
 
-  remove_banner ||= false
-%>
-
-<% unless remove_banner %>
-  <%= render "govuk_publishing_components/components/inset_text", {
-    text: "Only the first #{visible_links} links will be shown on the public site.",
-  } %>
-<% end %>
-
-<div data-module="AddAnother" data-add-text="Add another featured link">
-  <%= form.fields_for :featured_links do |featured_link_form| %>
-    <div class="js-duplicate-fields-set govuk-!-margin-bottom-6">
-      <% if @translation_locale && @translation_locale.code != I18n.default_locale %>
-        <%= render "components/translated_input", {
-          input: {
-            label: {
-              text: "Title",
-            },
-            heading_size: "m",
-            value: featured_link_form.object.title,
-            name: "#{model}[featured_links_attributes][#{featured_link_form.index}][title]",
-            id: "#{model}_featured_links[#{featured_link_form.index}]_title",
-          },
-          details: {
-            text: featured_link_form.object.title,
-          },
-        } %>
-
-        <%= render "components/translated_input", {
-          input: {
-            label: {
-              text: "URL",
-            },
-            heading_size: "m",
-            value: featured_link_form.object.url,
-            name: "#{model}[featured_links_attributes][#{featured_link_form.index}][url]",
-            id: "#{model}_featured_links[#{featured_link_form.index}]_url",
-          },
-          details: {
-            text: featured_link_form.object.url,
-          },
-        } %>
-      <% else %>
-        <%= render "govuk_publishing_components/components/input", {
-          label: {
-            text: "Title",
-          },
-          heading_size: "m",
-          value: featured_link_form.object.title,
-          name: "#{model}[featured_links_attributes][#{featured_link_form.index}][title]",
-          id: "#{model}_featured_links[#{featured_link_form.index}]_title",
-        } %>
-
-        <%= render "govuk_publishing_components/components/input", {
-          label: {
-            text: "URL",
-          },
-          heading_size: "m",
-          value: featured_link_form.object.url,
-          name: "#{model}[featured_links_attributes][#{featured_link_form.index}][url]",
-          id: "#{model}_featured_links[#{featured_link_form.index}]_url",
-        } %>
-      <% end %>
-    </div>
+    <%= render "govuk_publishing_components/components/input", {
+      label: {
+        text: "URL",
+      },
+      heading_size: "s",
+      value: featured_link_form.object.url,
+      name: "#{model}[featured_links_attributes][#{index}][url]",
+      id: "#{model}_featured_links[#{index}]_url",
+    } %>
   <% end %>
-</div>
+<% end %>
