--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,7 +28,7 @@
   ],
 } %>
 
-<div class="govuk-width-container">
+<div class="govuk-width-container" data-module="ga4-link-setup ga4-link-tracker">
   <%= render "components/sub_navigation", {
     items: [
       sub_nav_item("New document", admin_new_document_path),
