--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -6,7 +6,7 @@
     <p class="govuk-body">If you need any support or want to delete a content block, you can raise a support request.</p>
     <span class="govuk-!-margin-right-2">
       <%= render "govuk_publishing_components/components/button", {
-        text: "Create new object",
+        text: "Create content block",
         href: content_block_manager.new_content_block_manager_content_block_document_path,
       } %>
     </span>
