restyle content block manager header
I've had to add custom styling here (and not use
the button group govuk style) because I wasn't
able to override the alignment of elements to get
it to match our design.

--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
@@ -1,3 +1,5 @@
 @import "components/filter-options-component";
 @import "components/host-editions-table-component";
 @import "components/timeline-component";
+
+@import "views/content_block_manager_header";
