add the last update date filter to Content Blocks
here we use the component and scope to filter by
last updated date. (error handling still to come)

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -56,6 +56,17 @@
         },
         expanded: true,
       },
+      {
+        heading: {
+          text: "Last updated date",
+        },
+        content: {
+          html: (
+            render(ContentBlockManager::ContentBlock::Document::Index::DateFilterComponent.new)
+          ),
+        },
+        expanded: true,
+      },
     ],
   } %>
 
