Handle errors when dates are invalid
If there are errors, we do the rest of the filters
without the erroring ones, so as to return
something helpful.

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/date_filter_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/date_filter_component.html.erb
@@ -4,6 +4,7 @@
   prefix: "last_updated_from",
   date_heading: "From",
   date_only: true,
+  error_items: helpers.errors_for(@errors, "last_updated_from"),
   year: {
     id: "last_updated_from_1i",
     name: "last_updated_from[1i]",
@@ -32,6 +33,7 @@
   prefix: "last_updated_to",
   date_heading: "To",
   date_only: true,
+  error_items: helpers.errors_for(@errors, "last_updated_to"),
   year: {
     id: "last_updated_to_1i",
     name: "last_updated_to[1i]",
