--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/index/filter_options_component.html.erb
@@ -62,7 +62,7 @@
         },
         content: {
           html: (
-            render(ContentBlockManager::ContentBlock::Document::Index::DateFilterComponent.new(filters: @filters))
+            render(ContentBlockManager::ContentBlock::Document::Index::DateFilterComponent.new(filters: @filters, errors: @errors))
           ),
         },
         expanded: true,
