--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/index.html.erb
@@ -1,6 +1,13 @@
 
 <% content_for :title_margin_bottom, 6 %>
 
+<% if @error_summary_errors %>
+  <%= render "govuk_publishing_components/components/error_summary", {
+    title: "There is a problem",
+    items: @error_summary_errors,
+  } %>
+<% end %>
+
 <div class="govuk-grid-row content-block-manager-header">
     <div class="govuk-grid-column-one-half">
       <h1 class="gem-c-title__text govuk-heading-xl">
@@ -29,6 +36,7 @@
     <%= render(
           ContentBlockManager::ContentBlock::Document::Index::FilterOptionsComponent.new(
             filters: @filters,
+            errors: @errors,
             ),
           ) %>
   </div>
