--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
@@ -1,5 +1,5 @@
-<% content_for :context, product_name %>
-<% content_for :title, "Manage #{add_indefinite_article @content_block_document.block_type.humanize}" %>
+<% content_for :context, "View #{@content_block_document.block_type.humanize.downcase}" %>
+<% content_for :title, @content_block_document.title %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
     href: content_block_manager.content_block_manager_content_block_documents_path,
