Add support request link to show page
Together with a bit of styling to algin the button correctly

--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
@@ -4,3 +4,4 @@
 @import "components/timeline-component";
 
 @import "views/content_block_manager_header";
+@import "views/content_block_manager_show";
