Add a Rollup component
This takes the rollup data and returns each item as a glance metric,
together with some custom styling.

--- a/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
+++ b/lib/engines/content_block_manager/app/assets/stylesheets/content_block_manager/application.scss
@@ -1,4 +1,5 @@
 @import "components/filter-options-component";
+@import "components/host-editions-rollup-component";
 @import "components/host-editions-table-component";
 @import "components/timeline-component";
 
