Change “Content appears in” to “List of locations”

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/show.html.erb
@@ -38,7 +38,7 @@
   <div class="govuk-grid-column-full">
     <%= render(
       ContentBlockManager::ContentBlock::Document::Show::HostEditionsTableComponent.new(
-        caption: "Content appears in",
+        caption: "List of locations",
         host_content_items: @host_content_items,
         current_page: @page,
         order: @order,
