Update table headings

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
@@ -13,7 +13,7 @@ it out for now-->
         sort_direction: sort_direction("title"),
       },
       {
-        text: "Document Type",
+        text: "Type",
         href: sort_link("document_type"),
         sort_direction: sort_direction("document_type"),
       },
@@ -23,17 +23,17 @@ it out for now-->
         sort_direction: sort_direction("instances"),
       },
       {
-        text: "Unique pageviews",
+        text: "Views (30 days)",
         href: sort_link("unique_pageviews"),
         sort_direction: sort_direction("unique_pageviews"),
       },
       {
-        text: "Publishing organisation",
+        text: "Lead organisation",
         href: sort_link("primary_publishing_organisation_title"),
         sort_direction: sort_direction("primary_publishing_organisation_title"),
       },
       {
-        text: "Updated",
+        text: "Last updated",
         href: sort_link("last_edited_at"),
         sort_direction: sort_direction("last_edited_at"),
       },
