Change timeline header text

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/document_timeline_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/document_timeline_component.html.erb
@@ -1,4 +1,4 @@
-<h2 class="govuk-heading-l">Previous updates</h2>
+<h2 class="govuk-heading-l">Change history</h2>
 
 <div class="timeline">
   <% items.each_with_index do |item, i| %>
