change copy based on action for confirmation screen
the copy is slightly different for three states:
1. a brand new edition created
2. a scheduled block is created
2. a new edition for an existing block is published

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/editions/workflow/confirmation.html.erb
@@ -12,10 +12,8 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-three-quarters govuk-body">
-    <h2 class="govuk-heading-m">What happens next</h2>
-    <p><%= @paragraph_copy %><br>
-    If you need any support or want to delete an instance you can
-      <%= link_to "raise a support request", support_url, class: "govuk-link--no-visited-state" %>
+    <h2 class="govuk-heading-m">What happens next?</h2>
+    <p><%= @paragraph_copy %> If you need any support or want to delete a content block you can raise a support request.
     </p>
     <%= render "govuk_publishing_components/components/button", {
         text: "View content block",
