Use a decorator instead of a presenter
This better matches what we’re trying to do, and also moves us out
of the `Query` namespace, as we’ll soon be handling decorating versions
elsewhere.

--- a/app/components/admin/editions/audit_trail_entry_component.html.erb
+++ b/app/components/admin/editions/audit_trail_entry_component.html.erb
@@ -3,7 +3,7 @@
 
   <% if compare_with_previous_version? %>
     <p class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-0">
-      <%= link_to "[Compare with previous version]", diff_admin_edition_path(@edition, audit_trail_entry_id: entry.version.item_id), class: "govuk-link" %>
+      <%= link_to "[Compare with previous version]", diff_admin_edition_path(@edition, audit_trail_entry_id: entry.item_id), class: "govuk-link" %>
     </p>
   <% end %>
 
