update logo image hint text
This adds a hardcoded image_hint to the form, which is then passed to the page to be displayed on the logo uploader instead of the standard image text.
This solves the issue at hand but as a follow up we should:

Audit for other image uploaders that don't require the 960 by 640 size
Look into a more strategic image upload approach potentially using the work related to supporting different image sizes https://github.com/alphagov/whitehall/blob/main/config/image_kinds.yml

--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -68,6 +68,7 @@
       image_cache_name: "organisation[logo_cache]",
       image_cache: organisation.logo_cache.presence,
       image_uploaded: organisation.all_asset_variants_uploaded?,
+      image_hint: "Images must be 288px by 300px",
     } %>
   </div>
 
