Remove existing form tracking
The existing form tracker will not meet the form tracking needs across Whitehall and the other publishing apps. Having one instance the form tracker is not useful and we will be beginning work next year to create a generic solution for form tracking. To avoid confusion we should existing form tracking for the time being.

--- a/app/views/admin/new_document/index.html.erb
+++ b/app/views/admin/new_document/index.html.erb
@@ -2,9 +2,7 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with url: admin_new_document_options_path, data: {
-      module: "ga4-form-setup ga4-form-tracker",
-    } do %>
+    <%= form_with url: admin_new_document_options_path do %>
       <%= render "govuk_publishing_components/components/radio", {
         heading: "New document",
         heading_level: 1,
