WIP on refactoring lead orgs to use add another and get rid of weird orgs association
I had to give up on this because we can't use select with search in conjunction with the add another component. One would need to reinitialise the select with search component each time a new fieldset was added, which will add substantial complexity to our Javascript code as currently all the modules function very independently.

This is frustrating because being able to remove the home grown edition organisations association management code was looking quite feasible.

--- a/app/views/admin/editions/_organisation_fields.html.erb
+++ b/app/views/admin/editions/_organisation_fields.html.erb
@@ -1,28 +1,55 @@
 <% if edition.can_be_related_to_organisations? %>
-  <%= render "govuk_publishing_components/components/fieldset", {
-    legend_text: "Lead organisations",
-    heading_level: 3,
-    heading_size: "m",
-    id: "edition_organisations",
-    error_message: errors_for_input(edition.errors, :organisations),
+  <% if Flipflop.add_another_for_lead_organisations? %>
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Lead organisations",
+      heading_level: 3,
+      heading_size: "m",
+      id: "edition_organisations",
+      error_message: errors_for_input(edition.errors, :organisations),
     } do %>
-    <% 0.upto(3) do |index| %>
-      <% lead_organisation_id = lead_organisation_id_at_index(edition, index) %>
-      <% cache_if lead_organisation_id.nil?, "#{taggable_organisations_cache_digest}-lead" do %>
+      <% 0.upto(3) do |index| %>
         <%= render "components/select_with_search", {
+          id: "edition_lead_organisation_ids_#{index + 1}",
+          name: "edition[lead_organisation_ids][]",
+          label: "Lead organisation #{index + 1}",
+          heading_size: "s",
+          include_blank: true,
+          options: taggable_organisations_container.map do |name, id|
+            {
+              text: name,
+              value: id,
+              selected: id == lead_organisation_id,
+            }
+          end,
+        } %>
+      <% end %>
+    <% end %>
+  <% else %>
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Lead organisations",
+      heading_level: 3,
+      heading_size: "m",
+      id: "edition_organisations",
+      error_message: errors_for_input(edition.errors, :organisations),
+    } do %>
+      <% 0.upto(3) do |index| %>
+        <% lead_organisation_id = lead_organisation_id_at_index(edition, index) %>
+        <% cache_if lead_organisation_id.nil?, "#{taggable_organisations_cache_digest}-lead" do %>
+          <%= render "components/select_with_search", {
             id: "edition_lead_organisation_ids_#{index + 1}",
             name: "edition[lead_organisation_ids][]",
             label: "Lead organisation #{index + 1}",
             heading_size: "s",
             include_blank: true,
             options: taggable_organisations_container.map do |name, id|
-            {
-              text: name,
-              value: id,
-              selected: id == lead_organisation_id,
-            }
-           end,
-        } %>
+              {
+                text: name,
+                value: id,
+                selected: id == lead_organisation_id,
+              }
+            end,
+          } %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
