Add ability to reorder social media links
Note that we set a default order on the social media accounts association. There are unlikely to ever be such a large number of accounts for an edition that this has a performance impact, so making association users call the order method each time seems unnecessarily onerous.

Co-authored-by: Ryan Brown <ryan.brown@digital.cabinet-office.gov.uk>
Co-authored-by: Alex Newton <alex.newton@digital.cabinet-office.gov.uk>

--- a/app/views/admin/editionable_social_media_accounts/index.html.erb
+++ b/app/views/admin/editionable_social_media_accounts/index.html.erb
@@ -18,11 +18,22 @@
       <%= link_to "Add new social media account", new_admin_edition_social_media_account_path(@edition), class: "govuk-link govuk-link--no-visited-state" %>
     </p>
 
-    <%= render "govuk_publishing_components/components/heading", {
-      text: "Social media accounts",
-      font_size: "l",
-      margin_bottom: 3,
-    } %>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <%= render "govuk_publishing_components/components/heading", {
+        text: "Social media accounts",
+        font_size: "l",
+        margin_bottom: 3,
+      } %>
+    </div>
+    <% if @edition.social_media_accounts.many? %>
+      <div class="govuk-grid-column-one-third">
+        <p class="govuk-body govuk-!-text-align-right">
+          <%= link_to("Reorder", reorder_admin_edition_social_media_accounts_path(@edition), class: "govuk-link govuk-link--no-visited-state") %>
+        </p>
+      </div>
+    <% end %>
+  </div>
 
     <% if @edition.social_media_accounts.any? %>
       <% @editionable_social_media_accounts_index_presenter.social_media_accounts.each do |social_media_account| %>
