Prevent breaking change when upgrading to govuk_publishing_components 48.0.0

--- a/app/views/admin/governments/prepare_to_close.html.erb
+++ b/app/views/admin/governments/prepare_to_close.html.erb
@@ -9,7 +9,9 @@
     } %>
 
     <%= render "govuk_publishing_components/components/list", {
-      aria_label: "A list of active ministerial appointments.",
+      aria: {
+        label: "A list of active ministerial appointments."
+      },
       visible_counters: true,
       extra_spacing: true,
       margin_bottom: 8,
