Make feedback banner use the configuration in the locale file
The feedback banner has a locale configuration value, but we had stopped using it at some point in favour of a variable in the phase banner template file.

This came as a bit of a surprise, resulting in the feedback banner being live unexpectedly.

--- a/app/views/shared/_phase_banner.html.erb
+++ b/app/views/shared/_phase_banner.html.erb
@@ -1,5 +1,3 @@
-<% show_feedback_banner ||= true %>
-
 <% if t('admin.whats_new.show_banner') %>
   <%= render "govuk_publishing_components/components/phase_banner", {
       id: "whats_new_banner",
@@ -15,7 +13,8 @@
           )
         }.", attributes: %w(class href)),
     } %>
-<% elsif show_feedback_banner %>
+<% end %>
+<% if t('admin.feedback.show_banner') %>
   <%= render "govuk_publishing_components/components/phase_banner", {
       id: "feedback_banner",
       phase: "Feedback",
